--- a/Blog.html
+++ b/Blog.html
@@ -24,7 +24,7 @@
             <div class="logo"><img src="Logo/GrandHap.png" /></div>
         </a>
         <ul class="links" id="menu">
-            <li><a href="index.html">HOME</a></li>
+            <li><a href="Index.html">HOME</a></li>
             <li><a href="About Us.html">ABOUT US</a></li>
             <li><a href="Services.html">SERVICES</a></li>
             <li class="current"><a href="Blog.html">BLOG</a></li>
