--- a/Services.html
+++ b/Services.html
@@ -20,7 +20,7 @@
     <!-----Navigation------->
     <nav id="navbar">
         <input id="nav-toggle" type="checkbox" />
-        <a href="Index.html">
+        <a href="index.html">
             <div class="logo"><img src="Logo/GrandHap.png" /></div>
         </a>
         <ul class="links" id="menu">
