--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!-----Navigation------->
   <nav id="navbar">
     <input id="nav-toggle" type="checkbox" />
-    <a href="Index.html">
+    <a href="index.html">
       <div class="logo"><img src="Logo/GrandHap.png" /></div>
     </a>
     <ul class="links" id="menu">
