--- a/Enquiry.html
+++ b/Enquiry.html
@@ -20,11 +20,11 @@
     <!-----Navigation------->
     <nav id="navbar">
         <input id="nav-toggle" type="checkbox" />
-        <a href="Index.html">
+        <a href="index.html">
             <div class="logo"><img src="Logo/GrandHap.png" /></div>
         </a>
         <ul class="links" id="menu">
-            <li><a href="Index.html">HOME</a></li>
+            <li><a href="index.html">HOME</a></li>
             <li><a href="About Us.html">ABOUT US</a></li>
             <li><a href="Services.html">SERVICES</a></li>
             <li><a href="Blog.html">BLOG</a></li>
